Feat: Home page segmented, login required features added, navbar added

--- a/Interface/Templates/footer.html
+++ b/Interface/Templates/footer.html
@@ -2,10 +2,10 @@
 </body>
 <footer class="footer">
     <div id="rrss">
-        <a href="https://github.com/GaboAbo">
+        <a target="_blank" href="https://github.com/GaboAbo">
             <img id="git" alt="">
         </a>
-        <a href="https://www.linkedin.com/in/robert-gabriel-mendoza-tovar-2aa3b9b8/">
+        <a target="_blank" href="https://www.linkedin.com/in/robert-gabriel-mendoza-tovar-2aa3b9b8/">
             <img id="linkedin" alt="">
         </a>
         <p>Author: GaboAbo</p>
