--- a/Interface/Templates/header.html
+++ b/Interface/Templates/header.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'icons/icons8-paper-plane-avantgarde-32.png' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'icons/icons8-robot-66.png' %}">
     <title>ChatBot</title>
 </head>
 <body>
+    <div class="topnav">
+        <a href="{{ '/' }}">ChatBot</a>
+        <a href="{{ '/login/' }}">Log In</a>
+        <a href="{{ '/register/' }}">Sign In</a>
+        <a href="{{ '/logout/' }}">Log Out</a>
+    </div>
