--- a/Interface/Templates/auth/logout.html
+++ b/Interface/Templates/auth/logout.html
@@ -10,6 +10,6 @@
         <p class="auth-warning">{{ error }}</p>
     </div>
     {% else %}
-    <h3 class="auth-title">You're not logged in. Would you like to <a href="{{ '/login/' }}">Login</a>?</h3>
+    <h3 class="auth-title">You're not logged in. Would you like to <a href="{{ '/login/' }}">LogIn</a>?</h3>
     {% endif %}
 {% include "footer.html" %}
