--- a/Interface/Templates/header.html
+++ b/Interface/Templates/header.html
@@ -11,7 +11,7 @@
 <body>
     <div class="topnav">
         <a href="{{ '/' }}">ChatBot</a>
-        <a href="{{ '/login/' }}">Log In</a>
-        <a href="{{ '/register/' }}">Sign In</a>
+        <a href="{{ '/login/' }}">SignIn</a>
+        <a href="{{ '/register/' }}">SignUp</a>
         <a href="{{ '/logout/' }}">Log Out</a>
     </div>
